--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "rust_redux"
 version = "0.1.0"
-authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>, Clayton Marshall <marsha88@purdue.edu>"]
+authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>"]
+repository = "https://github.com/fanderzon/rust-redux.git"
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
