--- a/examples/todo_list/Cargo.toml
+++ b/examples/todo_list/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "todo_list"
 version = "0.1.0"
-authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>"]
+authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>, Clayton Marshall <marsha88@purdue.edu>"]
 
 [dependencies]
 rust_redux = { path = "../../"}
