--- a/examples/todo_list/Cargo.toml
+++ b/examples/todo_list/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "todo_list"
 version = "0.1.0"
-authors = ["Fredrik Andersson <fredrik.andersson@widespace.com>"]
+edition = "2021"
+authors = ["Fredrik Andersson <f.anderzon@gmail.com>"]
 
 [dependencies]
-rust_redux = { path = "../../"}
+rust_redux = { path = "../.." }
+
