--- a/examples/todo_list/Cargo.toml
+++ b/examples/todo_list/Cargo.toml
@@ -6,4 +6,6 @@ authors = ["Fredrik Andersson <f.anderzon@gmail.com>"]
 
 [dependencies]
 rust_redux = { path = "../.." }
-
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
