Update crate categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/fanderzon/rust-redux.git"
 license = "MIT"
 readme = "README.md"
 description = "A Redux-like state management library for Rust."
-categories = ["data-structures", "state-management", "algorithms"]
+categories = ["data-structures"]
 keywords = ["redux", "state-management", "rust"]
 documentation = "https://docs.rs/rust_redux"
 homepage = "https://github.com/fanderzon/rust-redux"
